gets class-result reporting results for vals over 11

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": "4.7.*@dev"
+        "phpunit/phpunit": "4.7.*@dev",
+        "oodle/krumo": "dev-master"
     }
 }
