--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "phpunit/phpunit": "4.7.*@dev",
-        "oodle/krumo": "dev-master"
+        "oodle/krumo": "dev-master",
+        "mockery/mockery": "0.9.*"
     }
 }
